Make the scrollbar on summary tables show correctly
* Was previously showing with a gap beneath the content due to the padding

--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,7 @@ main {
 
 .set-stats-table {
   overflow-x: auto;
-  padding-bottom: 1rem;
+  margin-bottom: 1rem;
   font-size: small;
   
   table {
